--- a/src/app/pages/teacher-portal/my-renumerations/my-renumerations.component.html
+++ b/src/app/pages/teacher-portal/my-renumerations/my-renumerations.component.html
@@ -113,6 +113,11 @@
                                     <td>{{remun.status}}</td>
                                     <td>{{remun.payment_date}}</td>
                                     <td>Rs.{{remun.teacher_amount}}</td>
+                                <tr>
+                                    <td colspan="6" align="center"><strong>Total Teacher Amount Received For This
+                                            Month</strong>
+                                    </td>
+                                    <td>Rs.{{totalAmountReceivedForMonth}}</td>
                                 </tr>
                             </tbody>
                         </table>
