--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -37,7 +37,7 @@
   <div class="form-control-group">
     <span class="label-with-link">
       <label class="label" for="input-password">Password:</label>
-      <a class="forgot-password caption-2" routerLink="../request-password">Forgot Password?</a>
+      <a class="forgot-password caption-2" routerLink="../reset_password">Forgot Password?</a>
     </span>
     <input nbInput fullWidth [(ngModel)]="user.password" #password="ngModel" name="password" type="password"
       id="input-password" placeholder="Password" fieldSize="large"
