--- a/src/app/pages/student-portal/student-dashboard/student-dashboard.component.html
+++ b/src/app/pages/student-portal/student-dashboard/student-dashboard.component.html
@@ -1,15 +1,15 @@
 <div class="container-fluid">
-    <div class="row" *ngIf="notifications!=null">
+    <div class="row">
         <div class="col-sm-8">
 
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4" *ngIf="notifications.length!=0">
             <nb-card size="large">
                 <nb-card-header>
                     Notices
                 </nb-card-header>
                 <nb-list>
-                    <nb-list-item *ngFor="let notification of notifications">
+                    <nb-list-item class="noti" *ngFor="let notification of notifications">
                         <ng-container *ngIf="notification.action=='create'">
                             A New lecture for {{notification.lecture_name}} has been created at <br>
                             Room - {{notification.room_name}} on <br>
