--- a/src/app/pages/teacher-portal/teacher-dashboard/teacher-dashboard.component.html
+++ b/src/app/pages/teacher-portal/teacher-dashboard/teacher-dashboard.component.html
@@ -1,23 +1,24 @@
 <div class="container-fluid">
-    <div class="row" *ngIf="notifications!=null">
+    <div class="row">
         <div class="col-sm-8">
 
         </div>
         <div class="col-sm-4">
-            <nb-card size="large">
+            <nb-card size="large" *ngIf="notifications.length!=0">
                 <nb-card-header>
                     Notices
                 </nb-card-header>
                 <nb-list>
-                    <nb-list-item *ngFor="let notification of notifications">
-                        <ng-container *ngIf="notification.message=='create'">
-                            A New lecture for {{notification.lecture_name}} has been created at <br>
+                    <nb-list-item class="noti" *ngFor="let notification of notifications">
+                        <ng-container *ngIf="notification.action=='create'">
+                            <b>A New lecture for {{notification.lecture_name}} has been created at </b>><br>
                             Room - {{notification.room_name}} on <br>
                             Date - {{notification.date}} <br>
                             From - {{notification.start_time}} <br>
                             To - {{notification.end_time}}
                         </ng-container>
-                        <ng-container *ngIf="notification.message=='update'">
+
+                        <ng-container *ngIf="notification.action=='update'">
                             A New lecture for {{notification.lecture_name}} has been created at <br>
                             Room - {{notification.room_name}} on <br>
                             Date - {{notification.date}} <br>
