--- a/src/app/pages/teacher/create-teacher/create-teacher.component.html
+++ b/src/app/pages/teacher/create-teacher/create-teacher.component.html
@@ -1,5 +1,5 @@
-<div class="steppers-container row">
-    <div class="col-md-10 col-lg-10 col-xxxl-7 offset-md-1">
+<div class="row">
+    <div class="col-md-8 offset-md-2">
         <!-- alert message -->
         <div class="animated fadeIn">
             <div class="alert alert-danger" role="alert" *ngIf="createTeacherAlert.status=='Error'">
@@ -13,111 +13,56 @@
             </div>
         </div>
     </div>
-    <div class="col-md-10 col-lg-10 col-xxxl-7 offset-md-1">
+    <div class="col-md-8 offset-md-2">
         <nb-card>
+            <nb-card-header>Register Teacher</nb-card-header>
             <nb-card-body>
-                <nb-stepper #stepper>
-
-                    <!-- Create Lecture -->
-                    <nb-step [stepControl]="teacherDetailsForm" label="Lecture Details">
-                        <form [formGroup]="teacherDetailsForm" (ngSubmit)="onFirstSubmit()" class="step-container">
-                            <h1><small>Fill Teacher Personal Details</small></h1>
-                            <br>
-                            <!-- lecture name -->
-                            <div class="form-group row">
-                                <label for="name" class="label col-sm-3 form-control-label"
-                                    style="font-size: 12.75px;">Enter Teacher Name</label>
-                                <div class="col-sm-9">
-                                    <input type="text" formControlName="name" nbInput fullWidth id="name"
-                                        style="font-size: 12.75px;" placeholder="Name">
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="nic" class="label col-sm-3 form-control-label"
-                                    style="font-size: 12.75px;">Enter Teacher NIC</label>
-                                <div class="col-sm-9">
-                                    <input type="text" formControlName="nic" nbInput fullWidth id="nic"
-                                        style="font-size: 12.75px;" placeholder="981592298v">
-                                </div>
-                            </div>
-
-                            <div class="form-group row">
-                                <label for="email" class="label col-sm-3 form-control-label"
-                                    style="font-size: 12.75px;">Enter Teacher Email</label>
-                                <div class="col-sm-9">
-                                    <input type="text" formControlName="email" nbInput fullWidth id="email"
-                                        style="font-size: 12.75px;" placeholder="Email">
-                                </div>
-                            </div>
-
-                            <div class="form-group row">
-                                <label for="mobile_no" class="label col-sm-3 form-control-label"
-                                    style="font-size: 12.75px;">Enter Teacher Contact Number</label>
-                                <div class="col-sm-9">
-                                    <input type="text" formControlName="mobile_no" nbInput fullWidth id="mobile_no"
-                                        style="font-size: 12.75px;" placeholder="Contact Number">
-                                </div>
-                            </div>
-
-                            <div class="form-group row">
-                                <label for="address" class="label col-sm-3 form-control-label"
-                                    style="font-size: 12.75px;">Enter Teacher Home Address</label>
-                                <div class="col-sm-9">
-                                    <input type="text" formControlName="address" nbInput fullWidth id="address"
-                                        style="font-size: 12.75px;" placeholder="Home Address">
-                                </div>
-                            </div>
-                            <button nbButton nbStepperNext>next</button>
-                        </form>
-                    </nb-step>
-
-                    <!-- Create Payment -->
-                    <nb-step [stepControl]="teacherQualificationForm" label="Lecture Payment Details">
-                        <form [formGroup]="teacherQualificationForm" (ngSubmit)="onSecondSubmit()"
-                            class="step-container">
-                            <h1><small>Fill up Lecture Payment details</small></h1>
-                            <br>
-
-                            <div class="form-group row">
-                                <label for="student_fee" class="label col-sm-4 form-control-label"
-                                    style="font-size: 12.75px;">Enter Qualification</label>
-                                <div class="col-sm-8">
-                                    <input type="text" formControlName="highestQualification" nbInput fullWidth
-                                        id="student_fee" style="font-size: 12.75px;" placeholder="Student Fee Amount">
-                                </div>
-                            </div> <br>
-                            <button nbButton nbStepperPrevious type="button">prev</button>
-                            <button nbButton nbStepperNext type="submit" (click)="moveIn()">next</button>
-                        </form>
-                    </nb-step>
-
-                    <!-- Create Schedule -->
-                    <nb-step [stepControl]="teacherSubjectsForm" label="Schedule Details">
-                        <form [formGroup]="teacherSubjectsForm" (ngSubmit)="onThirdSubmit()" class="step-container">
-                            <h1><small>Teacher Portal Account</small></h1>
-                            <br>
-                            <div class="form-group row">
-                                <label for="student_fee" class="label col-sm-4 form-control-label"
-                                    style="font-size: 12.75px;">Enter Username</label>
-                                <div class="col-sm-8">
-                                    <input type="text" formControlName="subjects" nbInput fullWidth id="student_fee"
-                                        style="font-size: 12.75px;" placeholder="Student Fee Amount">
-                                </div>
-                            </div> <br>
-
-                            <button nbButton nbStepperPrevious type="button" (click)="moveOut()">prev</button>
-                            <button nbButton nbStepperNext type="button" (click)="onThirdSubmit()">Confirm</button>
-                        </form>
-                    </nb-step>
-
-                    <nb-step [stepControl]="teacherSubjectsForm" [hidden]="true" label="Third step">
-                        <div class="step-container">
-                            <h3>Wizard completed!</h3>
-                            <button nbButton (click)="stepper.reset()" type="button">Try again</button>
+                <form class="form-horizontal" [formGroup]="teacherDetailsForm" (ngSubmit)="submitTeacherForm()">
+                    <div class="form-group row">
+                        <label for="name" class="label col-sm-3 form-control-label" style="font-size: 12.75px;">Enter
+                            Teacher Name</label>
+                        <div class="col-sm-9">
+                            <input type="text" formControlName="name" nbInput fullWidth id="name"
+                                style="font-size: 12.75px;" placeholder="Name">
                         </div>
-                    </nb-step>
+                    </div>
+                    <div class="form-group row">
+                        <label for="nic" class="label col-sm-3 form-control-label" style="font-size: 12.75px;">NIC
+                            Number</label>
+                        <div class="col-sm-9">
+                            <input type="text" formControlName="nic" nbInput fullWidth id="nic" ng-model="field"
+                                style="font-size: 12.75px;" placeholder="981592298v">
+                        </div>
+                    </div>
 
-                </nb-stepper>
+                    <div class="form-group row">
+                        <label for="email" class="label col-sm-3 form-control-label" style="font-size: 12.75px;">Enter
+                            Email</label>
+                        <div class="col-sm-9">
+                            <input type="email" formControlName="email" nbInput fullWidth id="email"
+                                style="font-size: 12.75px;" placeholder="Email">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="mobile_no" class="label col-sm-3 form-control-label"
+                            style="font-size: 12.75px;">Enter Contact Number</label>
+                        <div class="col-sm-9">
+                            <input type="text" formControlName="mobile_no" nbInput fullWidth id="mobile_no"
+                                style="font-size: 12.75px;" placeholder="Contact Number">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="address" class="label col-sm-3 form-control-label" style="font-size: 12.75px;">Enter
+                            Address</label>
+                        <div class="col-sm-9">
+                            <input type="text" formControlName="address" nbInput fullWidth id="address"
+                                style="font-size: 12.75px;" placeholder="Home Address">
+                        </div>
+                    </div>
+                    <button nbButton type="submit">Submit</button>
+                </form>
             </nb-card-body>
         </nb-card>
     </div>
